[tool.poetry]
name = "langgraphdemo"
version = "0.1.0"
description = "Small demo of building AI apps with LangGraph"
authors = ["jperedo <jperedo@bolbeck.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.1.1"
langgraph = "^0.0.30"
langchain = "^0.1.13"
langchainhub = "^0.1.15"
langchain-groq = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
